--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,12 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "name": "debug",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/onemon",
-      "args": [
-        "examples/deamon.js",
-        "script"
-      ],
-      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ttsc",
+      "cwd": "${workspaceFolder}/fixtures",
       "console": "integratedTerminal",
     },
   ]
