--- a/fixtures/tsconfig.json
+++ b/fixtures/tsconfig.json
@@ -1,25 +1,11 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "compilerOptions": {
-    "strict": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "es2020",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "sourceMap": true,
-    "strictPropertyInitialization": false,
-    "outDir": "dist",
-    "plugins": [
-      {
-        "transform": "ts-transformer-design"
-      }
-    ]
-  },
-  "include": [
-    "src/**/*"
-  ]
+  "references": [
+    {
+      "path": "./example-1"
+    },
+    {
+      "path": "./example-2"
+    }
+  ],
+  "files": []
 }
