--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "request": "launch",
       "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ttsc",
       "args": [
-        "-b"
+        "-b",
+        "--watch"
       ],
       "cwd": "${workspaceFolder}/fixtures",
       "console": "integratedTerminal",
