--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
+    "@types/replace-ext": "^2.0.0",
     "ttypescript": "^1.5.10",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "replace-ext": "^2.0.0"
   }
 }
